# rally-database

./: .env  .gitignore  Makefile  README.md  db_communication.py  fill_db.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: __init__.py  app.py  contestant.py  exercise.py  home.py  rally.py  stage.py  team.py  utils.py
app/.streamlit/: config.toml
app/exercice/: exercice.py
app/report/: contestant.py  rally.py  stage.py
data/: __init__.py  database_creation.ddl  db_communication.py  dump.sql  fill_db.py  stages.csv  table_creation.ddl
